src/test/deca/context/valid/created/sans_objet/if_iter.deca
//toDo
// Description:
//    Test de programme incorrect contextuellement où une variable est redéclarée dans une structure de contrôle.

// Auteur:
//    Jerome

// Historique:
//    Créé le 16/01/2024

{
    int i = 0;
    int j = 1;
    if (i == 0) {
        if (j == 1) {
            println("kaaaa");
        }
    }
}
