src/test/deca/context/invalid/created/rule2.7/vois.deca
// Résultat erreur:
//    Signature de méthode ou type de retour non conforme lors de la redéfinition (règle 2.7)
//
// Description:
//    Tests de programme incorrect contextuellement (redéfinition de méthode incorrecte)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class SuperClasse {
    void maMethode() {
        
    }
}

class SousClasse extends SuperClasse {
    void maMethode(int a) { 
        
    }
}
